syntax = "proto3";

package giftduels.duel.v1;

import "giftduels/shared/v1/common.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/duel/v1;duelv1";

message RollDiceEvent {
  shared.v1.DuelId duel_id = 1;
  int32 dice_value = 2;
  bool is_auto_rolled = 3;
  google.protobuf.Timestamp rolled_at = 4;
  shared.v1.TelegramUserId participant_telegram_user_id = 5;
}
